# elms_user_service

./: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  manage.py  pyproject.toml
elms_user_service/: asgi.py  urls.py  wsgi.py
elms_user_service/settings/: __init__.py  base.py  local.py
users_app/: admin.py  mails.py  models.py  serailizers.py  signals.py  urls.py  views.py
users_app/migrations/: 0001_initial.py
