[tool.poetry]
package-mode = false
name = "elms-user-service"
version = "0.1.0"
description = ""
authors = ["Harshal Marathe <dev.harshalmarathe@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.12"
django = "5.2"
django-environ = "^0.12.0"
pillow = "^11.2.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
